package Data;
import "RoomData.proto";

// list
message List {
	optional bool is_end = 1;
    repeated RoomData.RoomInfo room_info_list = 2;
    repeated RoomData.UserInfo user_info_list = 3;;
}
